Add link to dice.ninja

--- a/views/index.html
+++ b/views/index.html
@@ -40,8 +40,9 @@
                     </div>
                     <h4>Real Time</h4>
                     <p class="text">
-                        Watch your fortune rise (or crash) in real time
+                        Watch your fortune rise<br > in real time!
                     </p>
+                    <p class="text">Or if real-time isn't for you<br> give <a href="https://dice.ninja/">dice.ninja</a> a try</p>
                 </div>
                 <div class="feature columns large-3 small-6">
                     <div>
