Bunch of random changes

--- a/views/giveaway.html
+++ b/views/giveaway.html
@@ -5,7 +5,7 @@
     <h5>Add a giveaway</h5>
     <hr>
     <div class="row contact">
-        <form action="/aDm1n-giveaway" id="contact" method="post">
+        <form action="/admin-giveaway" id="contact" method="post">
             <label for="users">users:</label>
             <textarea id="users" rows="10" name="users" required></textarea>
             <label for="bits">Bits </label>
