Improve grammar, phrasing and typography

--- a/views/404.html
+++ b/views/404.html
@@ -8,7 +8,7 @@
                 <img src="/img/pig.jpg" alt=""/>
             </div>
             <div class="large-11 columns">
-                <h2>The page you are looking for doesn't exits...</h2>
+                <h2>The page you are looking for doesn't exist...</h2>
                 <a class="border-button red right" href="/">Go Home</a>
             </div>
         </div>
