--- a/views/error.html
+++ b/views/error.html
@@ -16,7 +16,7 @@
             <img src="/img/pig.jpg" alt=""/>
         </div>
         <div class="large-11 columns">
-            <h4>Something bad happened, My humans are working to fix this mess, please come back later...</h4>
+            <h4>Something bad happened. My humans are working to fix this mess, please come back later...</h4>
         </div>
     </div>
 </div>
