--- a/views/deposit.html
+++ b/views/deposit.html
@@ -1,4 +1,4 @@
-{{##def.page_title = 'Deposit Funds' #}}
+{{##def.page_title = 'Deposit History' #}}
 {{##def.content:
 <script type="text/javascript">
     function logout() {
@@ -50,7 +50,7 @@
                             {{~it.user.deposits :deposit:index}}
                                 <tr>
                                     <td>{{#def.format: {n: deposit.amount, decimals: 2 } }}</td>
-                                    <td><a href="https://www.blocktrail.com/tx/{{=deposit.txid}}" target="_blank">transaction</a></td>
+                                    <td><a href="https://www.blocktrail.com/tx/{{=deposit.txid}}" target="_blank">link</a></td>
                                     <td class="show-for-medium-up">{{=deposit.created}}</td>
                                 </tr>
                             {{~}}
