--- a/views/faq.html
+++ b/views/faq.html
@@ -43,13 +43,13 @@
                 <b><a name="how-to-play"></a>How to play?</b>
                 <p>
                     Place a bet. Watch the multiplier increase from 1x upwards! Cash out any time to get your bet
-                    multiplied by that multiplier. But be careful, as the game can crash at any time–and you'll get nothing!
+                    multiplied by that multiplier. But be careful because the game can crash at any time, and you'll get nothing!
                 </p>
             </dd>
             <dd>
                 <b><a name="bits"></a>What is a bit?</b>
                 <p>
-                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly 0.05 US dollar cents.
+                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.05 USD.
                     You are able to deposit and withdraw bits at any time by going to your account page.
                 </p>
             </dd>
@@ -57,8 +57,8 @@
                 <b><a name="giveaway"></a>How can I get free bits?</b>
                 <p>
                     Every hour you can claim 2 free bits on the account page. We do this so you may test and enjoy the game
-                    without any commitment. There are no strings attached, you may withdraw this money if you so please–but
-                    we do ask you to refrain from abusing this feature =)
+                    without any commitment. There are no strings attached, you may withdraw this money if you so please, but
+                    we ask you to refrain from abusing this feature =)
                 </p>
             </dd>
              <h3>Deposits</h3>
@@ -67,7 +67,7 @@
                 <p>
                     You will need to transfer bitcoins to the deposit address on your account page. If you do not have any bitcoins,
                     we can recommend <a href="https://coinbase.com">Coinbase</a> if you are in the US (although the registration process
-                    is quite lengthy). Another great option is <a href="https://localbitcoins.com/">LocalBitcoins.com</a>, which lists traders in your area
+                    is lengthy). Another great option is <a href="https://localbitcoins.com/">LocalBitcoins.com</a>, which lists traders in your area
                     willing to sell (or buy) bitcoins. You can also search online to see if there are any
                     bitcoin ATMs near you. And remember, you can withdraw directly to the bitcoin address on
                     your account page!
@@ -76,36 +76,36 @@
             <dd>
                 <b><a name="deposit-address"></a>How long is the deposit address valid?</b>
                 <p>
-                    It is <strong>permanently</strong> attached to your account. You can save it or use it for automatic
+                    It is <strong>permanently</strong> attached to your account. You can save it, or use it for automatic
                     funding or whatever you like. All payments to this address will automatically be credited to your account.
                 </p>
             </dd>
             <dd>
                 <b><a name="deposit-time"></a>How long do deposits take to be credited?</b>
                 <p>
-                    We instantly credit accounts upon a single confirmation, which on average takes approximately 10 minutes from the moment the transaction was made.
+                    We instantly credit accounts upon a single confirmation, which on average, is approximately 10 minutes from the time of the transaction.
                 </p>
             </dd>
             <dd>
                 <b><a name="withdraw"></a>How do I withdraw bits?</b>
                 <p>
-                    In your account page, you can transfer bits to any bitcoin address of your choosing. Small withdrawals
+                    In your account page, you can transfer bits to any bitcoin address of you want. Small withdrawals
                     (i.e. smaller than the balance of our hot-wallet) are processed instantly and you will be given the transaction ID immediately.
                 </p>
                 <p>
-                    Larger withdrawals will show in your withdraw page as "PENDING" and will require us to manually remove
-                    sufficient funds from our cold storage. Usually this process will take less than two hours, but may take up to 24 hours
+                    Larger withdrawals will show in your withdrawal page as "PENDING" and will require us to manually remove
+                    sufficient funds from our cold storage. Usually this process will take less than two hours, but may take up to 24 hours,
                     depending on the time of day and other circumstances.
                 </p>
                 <p>
-                    We remove 100 bits (about 5 US cents) from any withdrawal amount to cover mining fees. We charge this amount
-                    <strong>regardless</strong> of the actual mining fees attached to the transaction (which may be more or less
-                    than this, depending on the block competition at the time of your withdrawal).
+                    We remove 100 bits (about 0.05 USD) from any withdrawal amount to cover mining fees. We charge this amount
+                    <strong>regardless</strong> of the actual mining fees attached to the transaction, which may be more or less
+                    than this, depending on the block competition at the time of your withdrawal.
                 </p>
                 <p>
                     Withdrawals must be in increments of 1 bit (100 satoshis), with a minimum withdrawal of 200 bits (of which 100 bits
-                    go towards the mining fee). As required, we will as well chip in with our money to help expedite confirmation time, so that
-                    that we typically pay 200 bits in mining fees, despite only charging you 100 bits.
+                    go towards the mining fee). As required, we will chip in our money to help expedite confirmation time, so that
+                    we typically pay 200 bits in mining fees, despite charging you only 100 bits.
                 </p>
             </dd>
             <dd>
@@ -141,31 +141,31 @@
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
                     The bonus is a special prize that is awarded to the last people to cash out before the game crashes. Getting the bonus
-                    is critical to skillful playing of MoneyPot, as it is the <strong>only</strong> way to possibly overcome to house odds.
+                    is critical to skillful playing of MoneyPot, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>
                     The total bonus awarded each game is equal to 1 % of the sum of all players' bets. This whole amount is known
                     as the <code>bonus pool</code>. Once all players' bets are made, a <code>bonus multiplier</code> is created,
                     which is a number that can be multiplied by a player's bet to compute a suitable bonus for them.
-                    The bonus multiplier is chosen so that the <em>bonus pool</em> is sufficiently large to pay out
-                    the largest better if he was last person to cash out. This is key to making the bonus scheme fair for all,
-                    no matter how much or little was wagered.
+                    The bonus multiplier is chosen so that the <em>bonus pool</em> is sufficient to pay out
+                    the largest better, should he be the last person to cash out. This is key to making the bonus scheme fair for all,
+                    no matter how much or how little was wagered.
                 </p>
                 <p> Once the game ends, we find the player(s) that cashed out last. If no one cashed out, this is everyone. If
-                    multiple players cashed out at the same price point, we consider these players equally. We multiply their bets
+                    multiple players cashed out at the same price point, we consider these players equal. We multiply their bets
                     by the <em>bonus multiplier</em> and deduct it from the <em>bonus pool</em>. If there's not enough money left in the bonus pool, all players
-                    that cashed out at that same price point share the remainder according to their relative bet amounts.
+                    that cashed out at that same price point share the remainder, according to their relative bet amounts.
                 </p>
                 <p>
                     If there is money left in the bonus pool, we move on to the next best cash-out point and repeat the
-                    previous procedure. This continues until the bonus pool is exhausted or we have given a
+                    previous procedure. This continues until the bonus pool is exhausted, or until we have given a
                     bonus to all players who didn't cash out (which would guarantee the exhaustion of the bonus pool).
                 </p>
                 <p>
                     The bonus is <strong>not</strong> funded by the house odds, but rather by players. Each game has 1 %
                     chance of <code>instant-crashing</code>, where the game instantly crashes at the 1x multiplier. If this
                     happens, <strong>no</strong> bonuses are awarded. So in effect, the bonuses are funded directly by
-                    players and you compete against them for it. All successful money pot strategies revolve around securing
+                    players and you compete for it against them. All successful money pot strategies revolve around securing
                     this bonus.
                 </p>
             </dd>
@@ -174,8 +174,8 @@
                 <b><a name="odds"></a>What are the game odds?</b>
                 <p>
                     The house margin is scaled between 0 and 1 %, depending on how long you hold. An additional 1 % is effectively
-                    taken from every bet and put into the <a href="#bonus">bonus pool</a>, which is distributed out in its entirety
-                    every game. As a consequence skilless or random play has at worst an expected return of -2 %, but it is possible to overcome
+                    taken from every bet and put into the <a href="#bonus">bonus pool</a>, which is distributed in its entirety
+                    every game. As a consequence skilless or random play has, at worst, an expected return of -2 %, but it is possible to overcome
                     the house margin by skillfully getting bonuses.
                 </p>
                 <p>
@@ -192,7 +192,7 @@
                 </p>
                 <p>
                     The other important thing to keep in mind, is that every game has a 1 % chance of instantly crashing. We do not make
-                    *any* money on it–but rather use this to fund the bonus scheme. This is an important consideration to make if you
+                    *any* money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
                     are playing in such a way that you never win the bonus.
                 </p>
             </dd>
@@ -208,7 +208,7 @@
                     <code>sha256(gameCrashAmount + '|' + seed)</code> to verify we never changed the gameCrashAmount.
                 </p>
                 <p>
-                    <strong>Note:</strong> The gameCrashAmount is an integer which represents when the game crashes as a percentage. E.g.
+                    <strong>Note:</strong> The gameCrashAmount is an integer that represents when the game crashes as a percentage. E.g.
                     <a href="https://www.moneypot.com/game/451337">this Game</a> crashed at 16.31x with a a seed of
                     <code>e4e93da14e26c6d9a1e22f6d0e63c52d</code>, so to prove we didn't cheat the hash you would have seen
                     on your client is <code>25957aaf0a91ed9faaa0b4622f890a98eba174d40513cb0344ffc01a4bb55fce</code>
@@ -219,7 +219,7 @@
                 <b><a name="force"></a>What happens when the server forces people to cash out?</b>
                 <p>
                     Under some circumstances the server will force people to cash out. The most common reason is that the game multiplicator
-                    has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason are
+                    has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason is
                     unexpected server problems. If more than one person in a game is affected by the forced
                     cash-out, we allocate the last cash-out bonus to a random player.
                 </p>
