--- a/views/guide.html
+++ b/views/guide.html
@@ -5,8 +5,8 @@
     <h3>Strategy Guide</h3>
     <hr>
     <p>
-        <b>Money Pot</b> is a game of 99% luck, but 1% skill. This means, even if you play in a strategy oblivious way, you'll
-        not do so bad. But with a good enough strategy, it's actually possible to overcome the house odds, and even make
+        <b>Money Pot</b> is a game of 99% luck, but 1% skill. This means that if you play in a strategy-oblivious way, you'll
+        not do too bad. But with a good enough strategy, it's actually possible to overcome the house odds, and even make
         a profit.
 
     </p>
@@ -34,14 +34,14 @@
 
     <h4>Single Player Game</h4>
     <p>
-        If you're playing a game, and no one else joins -- it's not possible to overcome the <b>house odds</b>, and it becomes
+        If you're playing a game, and no one else joins, it's not possible to overcome the <b>house odds</b>, and it becomes
         a simple a simple game of luck.
     </p>
 
     <h4>Simple Greedy Strategy</h4>
     <p>
         Hold in the game, as soon as you're the last person holding, cash out immediately. This is a great strategy if
-        all of your opponents are very conservative, and cash out early. However, if you play against someone with the same
+        all your opponents are conservative, and cash out early. However, if you play against someone with the same
         strategy -- <b>you will both will infinitely hold, and never win the bonus.</b>
     </p>
 </div>
