Improve grammar, phrasing and typography

--- a/views/faq.html
+++ b/views/faq.html
@@ -50,13 +50,13 @@
                 <b><a name="bits"></a>What is a bit?</b>
                 <p>
                     A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.05 USD.
-                    You are able to deposit and withdraw bits at any time by going to your account page.
+                    You are able to deposit and withdraw bits at any time by going to your <a href="/account">account page</a>.
                 </p>
             </dd>
             <dd>
                 <b><a name="giveaway"></a>How can I get free bits?</b>
                 <p>
-                    Every hour you can claim 2 free bits on the account page. We do this so you may test and enjoy the game
+                    Every hour you can claim 2 free bits on your account page. We do this so that you may test and enjoy the game
                     without any commitment. There are no strings attached, you may withdraw this money if you so please, but
                     we ask you to refrain from abusing this feature =)
                 </p>
@@ -77,23 +77,23 @@
                 <b><a name="deposit-address"></a>How long is the deposit address valid?</b>
                 <p>
                     It is <strong>permanently</strong> attached to your account. You can save it, or use it for automatic
-                    funding or whatever you like. All payments to this address will automatically be credited to your account.
+                    funding, or whatever else you like. All payments to this address will be automatically credited to your account.
                 </p>
             </dd>
             <dd>
                 <b><a name="deposit-time"></a>How long do deposits take to be credited?</b>
                 <p>
-                    We instantly credit accounts upon a single confirmation, which on average, is approximately 10 minutes from the time of the transaction.
+                    We instantly credit accounts upon a single confirmation, which on average is approximately 10 minutes from the time of the transaction.
                 </p>
             </dd>
             <dd>
                 <b><a name="withdraw"></a>How do I withdraw bits?</b>
                 <p>
-                    In your account page, you can transfer bits to any bitcoin address of you want. Small withdrawals
+                    On your account page, you can transfer bits to any bitcoin address you want. Small withdrawals
                     (i.e. smaller than the balance of our hot-wallet) are processed instantly and you will be given the transaction ID immediately.
                 </p>
                 <p>
-                    Larger withdrawals will show in your withdrawal page as "PENDING" and will require us to manually remove
+                    Larger withdrawals will be shown in your withdrawal page as "PENDING" and will require us to manually remove
                     sufficient funds from our cold storage. Usually this process will take less than two hours, but may take up to 24 hours,
                     depending on the time of day and other circumstances.
                 </p>
@@ -104,7 +104,7 @@
                 </p>
                 <p>
                     Withdrawals must be in increments of 1 bit (100 satoshis), with a minimum withdrawal of 200 bits (of which 100 bits
-                    go towards the mining fee). As required, we will chip in our money to help expedite confirmation time, so that
+                    goes towards the mining fee). As required, we will chip in our own money to help expedite confirmation time, such that
                     we typically pay 200 bits in mining fees, despite charging you only 100 bits.
                 </p>
             </dd>
@@ -126,15 +126,15 @@
             <dd>
                 <b><a name="high"></a>How high can the game go?</b>
                 <p>
-                    Very, high! Over a billion! However, if during a game we ever are facing a net loss of 200,000 bits or greater,
-                    the server will automatically cash out all players still in the game, forcing them to enjoy an early win.
+                    Potentially infinite! However, if during a game we ever are facing a net loss of 200,000 bits or greater,
+                    the server will automatically cash out all players still in the game, forcing them to enjoy an early win and a sizeable profit.
                 </p>
             </dd>
             <dd>
                 <b><a name="limit"></a>What is the most I can bet?</b>
                 <p>
                     We currently have a bet limit of 100,000 bits. If betting more than this is important to you,
-                    please let us know in the support!
+                    please let us know via the <a href="/contact">contact page</a>!
                 </p>
             </dd>
             <dd>
@@ -144,7 +144,7 @@
                     is critical to skillful playing of MoneyPot, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>
-                    The total bonus awarded each game is equal to 1 % of the sum of all players' bets. This whole amount is known
+                    The total bonus awarded each game is equal to 1 % of the sum of all players' bets. This whole amount is known
                     as the <code>bonus pool</code>. Once all players' bets are made, a <code>bonus multiplier</code> is created,
                     which is a number that can be multiplied by a player's bet to compute a suitable bonus for them.
                     The bonus multiplier is chosen so that the <em>bonus pool</em> is sufficient to pay out
@@ -162,10 +162,10 @@
                     bonus to all players who didn't cash out (which would guarantee the exhaustion of the bonus pool).
                 </p>
                 <p>
-                    The bonus is <strong>not</strong> funded by the house odds, but rather by players. Each game has 1 %
+                    The bonus is <strong>not</strong> funded by the house odds, but rather by players. Each game has 1 %
                     chance of <code>instant-crashing</code>, where the game instantly crashes at the 1x multiplier. If this
                     happens, <strong>no</strong> bonuses are awarded. So in effect, the bonuses are funded directly by
-                    players and you compete for it against them. All successful money pot strategies revolve around securing
+                    the players and you compete for it against them. All successful MoneyPot strategies revolve around securing
                     this bonus.
                 </p>
             </dd>
@@ -173,26 +173,26 @@
             <dd>
                 <b><a name="odds"></a>What are the game odds?</b>
                 <p>
-                    The house margin is scaled between 0 and 1 %, depending on how long you hold. An additional 1 % is effectively
+                    The house margin is scaled between 0 and 1 %, depending on how long you hold. An additional 1 % is effectively
                     taken from every bet and put into the <a href="#bonus">bonus pool</a>, which is distributed in its entirety
-                    every game. As a consequence skilless or random play has, at worst, an expected return of -2 %, but it is possible to overcome
+                    every game. As a consequence, skilless or random play has—at worst—an expected return of -2 %, but it is possible to overcome
                     the house margin by skillfully getting bonuses.
                 </p>
                 <p>
                     The numbers are baked into the game, so you never need to worry about it. We do not
                     have a fixed house margin, as this would prevent highly conservative play (e.g. If you were
-                    only attempting to make $2 in a $100 game, a house margin of 1 % would be 50 % of your potential profits!).
+                    only attempting to make $2 in a $100 game, a house margin of 1 % would be 50 % of your potential profits!).
                     Our unique formula makes it fair for both highly conservative play (cash out early) and highly aggressive
-                    play (hold till you're a millionaire). All games are <a href="#provably-fair">provably fair</a>.
+                    play (hold until you're a millionaire). All games are <a href="#provably-fair">provably fair</a>.
                 </p>
                 <p>
                     The exact formula for the houses expected return is:<br />
-                    <code>1 % * (intendedCashOut - roomAmount) * (roomAmount / intendedCashOut)</code><br />
+                    <code>1 % * (intendedCashOut - roomAmount) * (roomAmount / intendedCashOut)</code><br />
                     But to really get a good sense of how this affects you, please use our handy <a href="/calculator">odds calculator</a>.
                 </p>
                 <p>
-                    The other important thing to keep in mind, is that every game has a 1 % chance of instantly crashing. We do not make
-                    *any* money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
+                    The other important thing to keep in mind is that every game has a 1 % chance of instantly crashing. We do not make
+                    <strong>any</strong> money on it, but rather use this to fund the bonus scheme. This is an important consideration to make if you
                     are playing in such a way that you never win the bonus.
                 </p>
             </dd>
@@ -200,17 +200,17 @@
                 <b><a name="fair"></a>Is the game fair?</b>
                 <p>
                     Absolutely! And we can prove it: Before each game starts and before any player joins
-                    we send a hash of what the result will be. The hash we display is the:
+                    we send a hash of what the result will be. The hash we display is calculated as:
                      <code>sha256(gameCrashAmount + '|' + seed)</code>
                 </p>
                 <p>
-                    And after a game ends, you can lookup the <code>gameCrashAmount</code> and the <code>seed</code>. Compute the
-                    <code>sha256(gameCrashAmount + '|' + seed)</code> to verify we never changed the gameCrashAmount.
+                    And after a game ends, you can look up the <code>gameCrashAmount</code> and the <code>seed</code> and compute the
+                    <code>sha256(gameCrashAmount + '|' + seed)</code> to verify that we never changed the gameCrashAmount.
                 </p>
                 <p>
                     <strong>Note:</strong> The gameCrashAmount is an integer that represents when the game crashes as a percentage. E.g.
                     <a href="https://www.moneypot.com/game/451337">this Game</a> crashed at 16.31x with a a seed of
-                    <code>e4e93da14e26c6d9a1e22f6d0e63c52d</code>, so to prove we didn't cheat the hash you would have seen
+                    <code>e4e93da14e26c6d9a1e22f6d0e63c52d</code>. So, to prove we didn't cheat, the hash you would have seen
                     on your client is <code>25957aaf0a91ed9faaa0b4622f890a98eba174d40513cb0344ffc01a4bb55fce</code>
                     which we computed via: <code>sha256('1631|e4e93da14e26c6d9a1e22f6d0e63c52d')</code>
                 </p>
@@ -218,8 +218,8 @@
             <dd>
                 <b><a name="force"></a>What happens when the server forces people to cash out?</b>
                 <p>
-                    Under some circumstances the server will force people to cash out. The most common reason is that the game multiplicator
-                    has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason is
+                    Under some circumstances the server will force people to cash out. The most common reason is that the game multiplier
+                    has gotten so large that we are risking too much of our bankroll (10 % or more). Another possible reason is
                     unexpected server problems. If more than one person in a game is affected by the forced
                     cash-out, we allocate the last cash-out bonus to a random player.
                 </p>
@@ -228,7 +228,7 @@
             <dd>
                 <b><a name="offline"></a>Where are funds stored?</b>
                 <p>
-                    100 % offline! All deposit addresses are generated using <a href="https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki">BIP32</a>,
+                    100 % offline! All deposit addresses are generated using <a href="https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki">BIP32</a>,
                     which allows us to deterministically generate addresses that our servers do not have access to. The server can monitor these addresses to credit deposits
                     but are not able to spend the funds held in them. This has the huge advantage that even if our site were to be compromised, attackers would not be able
                     to steal a bit!
