--- a/views/faq.html
+++ b/views/faq.html
@@ -230,7 +230,7 @@
                 <b><a name="offline"></a>Where are funds stored?</b>
                 <p>
                     100% offline! All deposit addresses are generated with <a href="https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki">bip32</a>
-                    which allows us to deterministically generate addresses that our servers do n1ot have access to. We can monitor these addresses for funding
+                    which allows us to deterministically generate addresses that our servers do not have access to. We can monitor these addresses for funding
                     but not be able to spend them. This has the huge advantage that even if our site was compromised, attackers would not be able
                     to steal a bit!
                 </p>
