--- a/views/template/header.html
+++ b/views/template/header.html
@@ -3,7 +3,7 @@
 
             <div class="title">
                 <a href="/">
-                    <img src="/img/logo.png" alt="logo"/>
+                    <img src="/img/logo.png" alt="logo" width="40px" />
                     <h1 class="hide-for-small-only">MoneyPot.com</h1>
                 </a>
             </div>
