--- a/views/index.html
+++ b/views/index.html
@@ -51,8 +51,8 @@
                     <h4>Secure</h4>
                     <p class="text">
                         <a href="faq#offline">Offline storage</a><br>
-                        <a href="faq#fair">Provably fair</a><br>
-                        Razor thin <a href="faq#odds">house edge</a>
+                        <a href="faq#fair">Provably predetermined</a><br>
+                        Razor thin <a href="faq#odds">house edge</a> (between 0 and 1%)
                     </p>
                 </div>
                 <div class="feature columns large-3 small-6">
