Few little changes

--- a/views/game.html
+++ b/views/game.html
@@ -38,9 +38,7 @@
                         Lose
                         {{?}}
                         {{? play.bonus }}
-                        <div class="star show-for-medium-up">
-                            <small class="bonus" >+{{#def.format: {n: play.bonus, decimals: 2} }}</small>
-                        </div>
+                        <small class="bonus" >+ bonus {{#def.format: {n: play.bonus, decimals: 2} }}</small>
                         {{?}}
                     </td>
                     <td>
